--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,10 +43,10 @@
     <%= render "patrials/header" %>
     <div class="container">
       <div class="row">
-        <div class="col-md-2">
+        <div class="d-none d-xl-block col-xl-2">
           <%= render "patrials/side_bar" %>
         </div>
-        <div class="col-12 col-md-10">
+        <div class="col-12 col-xl-10">
           <%= yield %>
         </div>
       </div>
