--- a/app/views/patrials/_header.html.erb
+++ b/app/views/patrials/_header.html.erb
@@ -52,12 +52,12 @@
 
 <div class="container-fluid">
   <div class="row justify-content-between">
-    <div class="col-md-auto col-sm-12 text-center">
+    <div class="col-md-auto text-center">
       <a href="/">
         <%= image_tag(app_images.logo.image.url, alt: 'logo', style: 'height: 65px;') %>
       </a>
     </div>
-    <div class="col-md-auto">
+    <div class="d-none d-xl-block col-xl-auto">
       <address class="" style="margin-bottom: -1rem;">
         <ul style="list-style: none">
           <li>
@@ -95,7 +95,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-primary" style="padding: 5px 0 5px 1rem; margin-bottom: 10px;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="padding: 5px 0 5px 1rem; margin-bottom: 10px;">
   <button class="navbar-toggler order-first" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
