--- a/app/views/carts/product_to_cart_error.js.erb
+++ b/app/views/carts/product_to_cart_error.js.erb
@@ -1,5 +1,5 @@
-qwe();
-function qwe() {
+product_to_cart_error();
+function product_to_cart_error() {
   var cart_notice = document.createElement("div");
   cart_notice.className = "alert alert-danger fixed-top notice text-center";
   cart_notice.innerText = "Превышен лимит";
