--- a/app/views/admin/products/_edit_form.html.erb
+++ b/app/views/admin/products/_edit_form.html.erb
@@ -16,6 +16,10 @@
   .photo_panel_right {
     padding-right: 25px;
   }
+
+  .image {
+    border: 1px dashed black;
+  }
 </style>
 
 <%= form_for [:admin, product] do |form| %>
@@ -51,7 +55,9 @@
         </div>
       </div>
 
-      <%= image_tag(photo.image.url, alt: 'Image', width: '100%', data: { id: photo.id}) %>
+      <div id="main_image" class="image">
+        <%= image_tag(photo.image.url, alt: 'Image', width: '100%', data: { id: photo.id}) %>
+      </div>
     <% end %>
     <div class="row">
       <% @product.product_photos.not_main.each do |photo| %>
@@ -73,7 +79,9 @@
             </div>
           </div>
 
-          <%= image_tag(photo.image.url, alt: 'Image', width: '100%', data: {id: photo.id}) %>
+          <div class="image">
+            <%= image_tag(photo.image.url, alt: 'Image', width: '100%', data: {id: photo.id}) %>
+          </div>
         </div>
       <% end %>
     </div>
@@ -155,6 +163,12 @@
 <script type="text/javascript">
   $('img').hover(function(){
     var id = $(this).attr('data-id');
-    $('#panel_'+id).toggle()
+    $('#panel_'+id).show();
+    $('#panel_'+id).hover(function(){
+      $(this).show()
+    })
+  }, function(){
+    var id = $(this).attr('data-id');
+    $('#panel_'+id).hide();
   });
 </script>
