--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -13,45 +13,23 @@
   <title>Angar.kh.ua</title>
 <% end %>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <%= image_tag(carousel_images.first.image.url, class: "d-block w-100") %>
-    </div>
-    <% carousel_images.each do |carousel_image| %>
-      <div class="carousel-item">
-        <%= image_tag(carousel_image.image.url, class: "d-block w-100") %>
+<%= render "patrials/carousel" %>
+
+<div id="categories" class="">
+  <h2>Категории:</h2>
+  <div class="row">
+    <% categories.order(:id).each do |category| %>
+      <div class="col-3">
+        <div class="card text-center">
+          <% if category.image? %>
+            <%= link_to image_tag(category.image.url, alt: category.name, class: "img"), category %>
+          <% end %>
+        </div>
       </div>
     <% end %>
-    <!-- <div class="carousel-item">
-      <img class="d-block w-100 c-image" src="https://cdn-st1.rtr-vesti.ru/vh/pictures/hd/175/104/4.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100 c-image" src="https://images.ua.prom.st/1820372724_igrovoj-kompyuter-intel.jpg" alt="Third slide">
-    </div> -->
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
 
-<h2>Категории:</h2>
-<div class="row">
-  <% categories.order(:id).each do |category| %>
-    <div class="col-3">
-      <div class="card text-center">
-        <% if category.image? %>
-          <%= link_to image_tag(category.image.url, alt: category.name, class: "img"), category %>
-        <% end %>
-      </div>
-    </div>
-  <% end %>
-</div>
 
 <h1 style="font-size: 1.78rem;">Angar.kh.ua - Компьютерная техника для Вас в наличии и под заказ!!!</h1>
 <p>text</p>
