--- a/app/views/carts/product_to_cart.js.erb
+++ b/app/views/carts/product_to_cart.js.erb
@@ -1,5 +1,6 @@
 document.getElementById('cart_link_count').innerText = "<%= @cart.total_product_count %>";
 document.getElementById('cart_link').className = "btn";
+document.getElementById('cart_link').href = "/carts/<%= @cart.id %>"
 document.getElementById('cart_link').setAttribute("style", "background-color: yellow; color: #007bff !important; cursor: pointer");
 
 <% if @add_in_cart_modal%>
