--- a/app/views/patrials/_carousel.html.erb
+++ b/app/views/patrials/_carousel.html.erb
@@ -1,12 +1,12 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag(carousel_images.first.image.url, class: "d-block w-100") %>
+      <%= image_tag(carousel_images.first.image.url, width: "100%", height: "245px") %>
     </div>
     <% carousel_images.each do |carousel_image| %>
       <% if carousel_image.image? %>
         <div class="carousel-item">
-          <%= image_tag(carousel_image.image.url, class: "d-block w-100") %>
+          <%= image_tag(carousel_image.image.url, width: "100%", height: "245px") %>
         </div>
       <% end %>
     <% end %>
