--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,6 +10,49 @@
   .image_button {
     cursor: pointer;
   }
+
+  .specs {
+    padding-inline-start: 1.5rem;
+  }
+
+  .photo_indecator.active {
+    border: 3px solid #007bff;
+    width: calc(100% - 6px);
+  }
+
+  .carousel-indicators {
+    position: relative;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 15;
+    display: block;
+    justify-content: center;
+    padding-left: 0;
+    margin-right: -5px;
+    margin-left: 0;
+    list-style: none;
+  }
+
+  .carousel-indicators li {
+    box-sizing: content-box;
+    -ms-flex: 0 1 auto;
+    flex: 0 1 auto;
+    width: 100%;
+    height: 100%;
+    margin-right: 0px;
+    margin-left: 0px;
+    text-indent: 0px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    background-clip: padding-box;
+    border-top: 0;
+    border-bottom: 0;
+    opacity: 1;
+    transition: opacity .6s ease;
+  }
+
 </style>
 
 <nav aria-label="breadcrumb">
@@ -40,19 +83,19 @@
   </li>
 </ul>
 <div class="row">
-  <div class="col-6">
+  <div class="col-8">
     <div class="tab-content" id="myTabContent">
-      <div class="tab-pane fade show active aaa" id="discription" role="tabpanel" aria-labelledby="home-tab">
+      <div class="tab-pane fade show active" id="discription" role="tabpanel" aria-labelledby="home-tab">
         <h2>Фото:</h2>
         <div class="row">
-          <div class="col-5">
+          <div class="col-3">
             <% @product.product_photos.not_main.each do |photo| %>
               <a data-toggle="modal" data-target="#photoModal" class="image_button" data-id="<%= photo.id %>">
-                <%= image_tag(photo.image.url, width: '100%', alt: @product.name, style: "padding-bottom: 8px;") %>
+                <%= image_tag(photo.image.url, width: '100%', height: '93px', alt: @product.name, style: "padding-bottom: 8px;") %>
               </a>
             <% end %>
           </div>
-          <div class="col-7">
+          <div class="col-9">
             <% @product.product_photos.main.each do |photo| %>
               <a data-toggle="modal" data-target="#photoModal" class="image_button" data-id="<%= photo.id %>">
                 <%= image_tag(photo.image.url, width: '100%', alt: @product.name) %>
@@ -61,14 +104,14 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane fade aaa" id="specifications" role="tabpanel" aria-labelledby="profile-tab">
+      <div class="tab-pane fade" id="specifications" role="tabpanel" aria-labelledby="profile-tab">
         <h2>Технические характеристики:</h2>
         <ul class="specs">
           <% @product.product_properties.order(:id).each do |pp| %>
             <% if pp.property.root? %>
               <li><%= pp.property.name %>:</li>
             <% else %>
-              <ul>
+              <ul class="specs">
                 <% if pp.value? %>
                   <li><%= pp.property.name %>: <%= pp.value %></li>
                 <% end %>
@@ -112,13 +155,13 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-4">
     <div class="text-right" style="font-size: 0.7rem;">Индекс: <%= @product.id %></div>
     <div class="text-center" style="font-size: 2.5rem;"><%= @product.price %> грн.</div>
     <% if @product.display %>
       <%= form_tag product_to_cart_carts_path, method: 'get', class: 'row', style: 'margin: 0', remote: true do %>
         <%= hidden_field_tag(:product_id, value = @product.id) %>
-        <%= number_field_tag(:product_count, '1',min: 1, max: @product.quantity, class: "form-control col-2", style: "margin-right: 10px;") %>
+        <%= number_field_tag(:product_count, '1',min: 1, max: @product.quantity, class: "form-control col-3", style: "margin-right: 10px;") %>
         <%= submit_tag("Добавить в корзину", class: "btn btn-primary col-auto", style: "color: yellow") %>
       <% end %>
     <% else %>
@@ -134,49 +177,16 @@
 </div>
 
 <!-- PhotoModal -->
-<div class="modal fade" id="photoModal" tabindex="-1" role="dialog" aria-labelledby="photoModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="photoModalLabel"><%= @product.name %></h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-          <div class="row">
-            <div class="col-3">
-
-            </div>
-            <div class="col-9">
-              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <% @product.product_photos.each do |photo| %>
-                    <div class="carousel-item" id="photo_<%= photo.id %>">
-                      <%= image_tag(photo.image.url, width: '100%') %>
-                    </div>
-                  <% end %>
-                </div>
-              </div>
-              <!-- Кнопки карусели -->
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "patrials/product_photo_modal" %>
 
 <script>
-    $('.image_button').on('click', function(){
-      photo_id = $(this).attr('data-id');
-      $('#photo_'+photo_id).addClass("active");
-    });
+  $('.image_button').on('click', function(){
+    photo_id = $(this).attr('data-id');
+    $('#photo_'+photo_id).addClass("active");
+    $('#photo_indecator_'+photo_id).addClass("active");
+  });
+  $('#photoModal').on('hidden.bs.modal', function () {
+    $('.carousel-item').removeClass('active');
+    $('.photo_indecator').removeClass('active');
+  });
 </script>
