--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -32,7 +32,9 @@
                   <% order.cart.cart_products.each do |cart_product| %>
                     <div class="row">
                       <div class="col-auto" style="padding:0 0 10px 15px;">
-                        <%= link_to image_tag(cart_product.product.attachments.first.index_admin_thumb.url), edit_admin_product_path(cart_product.product) %>
+                        <% cart_product.product.product_photos.main.each do |photo| %>
+                          <%= link_to image_tag(photo.image.url, width: '80px'), edit_admin_product_path(cart_product.product) %>
+                        <% end %>
                       </div>
                       <div class="col" style="padding-left: 10px;">
                         <div><%= link_to cart_product.product.name, edit_admin_product_path(cart_product.product) %> - <span style="font-size: 0.9rem;"><%= cart_product.product_count %> шт.</span></div>
@@ -93,7 +95,7 @@
     <script type="text/javascript">
       $('#change_stasus_input_<%= order.id %>').on('change', function(){
         if ($(this).val() == 'Отменен') {
-          $('#orderCancelModal_<%= order.id %>').modal()
+          $('#orderCancelModal_<%= order.id %>').modal('show')
         }else{
           $('#change_stasus_form_<%= order.id %>').find('[type=submit]').trigger('click');
         }
