--- a/app/views/order_mailer/new_order_admin.html.erb
+++ b/app/views/order_mailer/new_order_admin.html.erb
@@ -39,7 +39,7 @@
         <% end %>
           <tr>
             <td colspan="3" class="text-right">Итого:</td>
-            <td colspan="2" id="total_cart_sum" class="text-center"><%= @cart.total_cart_sum %> грн.</td>
+            <td colspan="2" id="total_cart_sum" class="text-center"><%= @order.cart.total_cart_sum %> грн.</td>
           </tr>
       </tbody>
     </table>
