--- a/app/views/patrials/_product_photo_modal.html.erb
+++ b/app/views/patrials/_product_photo_modal.html.erb
@@ -20,8 +20,8 @@
           <div class="row">
             <div class="col-3" style="overflow-y: auto; height: 378px;">
               <ul class="carousel-indicators">
-                <% @product.product_photos.each do |photo| %>
-                  <li id="photo_indecator_<%= photo.id %>" class="photo_indecator" data-target="#carouselExampleIndicators" data-slide-to="0">
+                <% @product.product_photos.each_with_index do |photo, index| %>
+                  <li id="photo_indecator_<%= photo.id %>" class="photo_indecator" data-target="#carouselExampleIndicators" data-slide-to="<%= index %>">
                     <%= image_tag(photo.image.url, width: '100%', height: '112px') %>
                   </li>
                 <% end %>
