--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -21,7 +21,7 @@
   <h2>Категории:</h2>
   <div class="row">
     <% categories.order(:id).each do |category| %>
-      <div class="col-3">
+      <div class="col-lg-3 col-md-4 col-sm-6">
         <div class="card text-center">
           <% if category.image? %>
             <%= link_to image_tag(category.image.url, alt: category.name, class: "img"), category %>
