--- a/app/views/patrials/_header.html.erb
+++ b/app/views/patrials/_header.html.erb
@@ -175,7 +175,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-dark" style="color:yellow;" data-dismiss="modal">Закрыть</button>
         <%= link_to "Регистрация", new_registration_path(resource_name), class: "btn btn-primary", style: "color:yellow;" %>
-        <%= link_to "Востановление пароля", new_password_path(resource_name), class: "btn btn-primary", style: "color:yellow;" %>
+        <%= link_to "Забыл пароль?", new_password_path(resource_name), class: "btn btn-primary", style: "color:yellow;" %>
       </div>
     </div>
   </div>
