--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -1,25 +1,25 @@
-<h2>Change your password</h2>
+<% content_for :head do %>
+  <title>Смена пароля | Angar.kh.ua</title>
+<% end %>
+
+<h2>Смена пароля</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+  <div class="form-row" style="margin-bottom: 10px;">
+    <div class="col">
+      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: "Новый пароль" %>
+    </div>
+
+    <div class="col">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', placeholder: "Подтверждение пароля" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
+  <div class="actions d-flex justify-content-between" style="padding-top: -10px;"">
+    <%= f.submit "Обновить пароль", class: "btn btn-primary", style: "color: yellow; width: 33%" %>
+    <%= render "users/shared/links" %>
   </div>
 <% end %>
-
-<%= render "users/shared/links" %>
