--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,11 +1,29 @@
 <h1>Products</h1>
 
 <div class="row">
-  <div class="col-10">
+  <div class="col-2">
+    Сортировка:<br/>
+    <%= link_to "Все продукты", admin_products_path %>
+    <ul>
+      <li>По отображению:</li>
+      <ul>
+        <li><%= link_to "disp", admin_products_path(displayed: true) %></li>
+        <li><%= link_to "not_disp", admin_products_path(not_displayed: true) %></li>
+      </ul>
+      <li>По категориям:</li>
+      <ul>
+        <% @categories.each do |category| %>
+          <li><%= link_to category.name, admin_products_path(by_category: category.id) %></li>
+        <% end %>
+      </ul>
+    </ul>
+  </div>
+  <div class="col-8">
     <table class="table table-hover">
       <thead>
         <tr>
           <th>Изображение</th>
+          <th>Категория</th>
           <th>Наименование</th>
           <th>Цена</th>
           <th>Количество</th>
@@ -21,6 +39,7 @@
                 <%= image_tag(photo.image.url, width: '80px') %>
               <% end %>
             </td>
+            <td><%= product.category.name %></td>
             <td>
               <div class="">
                 <%= link_to product.name, edit_admin_product_path(product) %>
